--- a/static_site/index.html
+++ b/static_site/index.html
@@ -15,10 +15,10 @@
         <ul class="cards">
           <li class="card">
             <div class="view front-view">
-              <img src="images/que_icon.svg" alt="icon">
+              <img src="images/que_icon.svg" alt="hidden card">
             </div>
             <div class="view back-view">
-              <img src="images/img-1.png" alt="card-img">
+              <img src="images/img-1.png" alt="An emerald cut into a diamond shape.">
             </div>
           </li>
           
